Fix alignment issues

--- a/app/tailwind/components/buttons.css
+++ b/app/tailwind/components/buttons.css
@@ -1,5 +1,5 @@
 .btn {
-  @apply .font-bold .inline-block .pb-2 .pl-8 .pr-8 .pt-2 .rounded .text-white;
+  @apply .font-bold .inline-block .pb-2 .pl-8 .pr-8 .pt-2 .rounded .text-white .whitespace-no-wrap;
 }
 
 .btn-gold {
